force-app/main/default/objects/JBCXM__Permission__c/JBCXM__Permission__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>Permission</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>