force-app/main/default/objects/JBCXM__Permission__c/fields/JBCXM__Dashboard__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Dashboard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dashboard</label>
    <referenceTo>JBCXM__Dashboard__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>