force-app/main/default/objects/JBCXM__Permission__c/fields/JBCXM__Survey__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>