force-app/main/default/objects/JBCXM__Permission__c/fields/JBCXM__UIView__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UIView__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UI Views</label>
    <referenceTo>JBCXM__UIViews__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>